--- a/pages/6468.html
+++ b/pages/6468.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="complex_geometry">Complex geometry</h4>
 
-<div class="hide"><p><a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>, <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a>, <a class="existingWikiWord" href="/nlab/show/complex+line">complex line</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/complex+geometry">complex geometry</a></strong></p><ul>
+<div class="hide"><div>
+<p><a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>, <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a>, <a class="existingWikiWord" href="/nlab/show/complex+line">complex line</a></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/complex+geometry">complex geometry</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/complex+manifold">complex manifold</a>, <a class="existingWikiWord" href="/nlab/show/complex+structure">complex structure</a></p>
 </li>
@@ -325,7 +330,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/complex+analytic+space">complex analytic space</a></p>
 </li>
-</ul><h3 id="variants">Variants</h3><ul>
+</ul>
+
+<h3 id="variants">Variants</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/generalized+complex+geometry">generalized complex geometry</a></p>
 </li>
@@ -333,9 +342,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/complex+supermanifold">complex supermanifold</a></p>
 </li>
-</ul><h3 id="structures">Structures</h3><ul>
+</ul>
+
+<h3 id="structures">Structures</h3>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/Dolbeault+complex">Dolbeault complex</a></li>
-</ul><h3 id="examples">Examples</h3><ul>
+</ul>
+
+<h3 id="examples">Examples</h3>
+
+<ul>
 <li>
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_0840443566213f96efc91cbad84ec37a8bb42e6b_1"><semantics><mrow><mi>dim</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">dim = 1</annotation></semantics></math>: <a class="existingWikiWord" href="/nlab/show/Riemann+surface">Riemann surface</a>, <a class="existingWikiWord" href="/nlab/show/super+Riemann+surface">super Riemann surface</a></p>
 </li>
@@ -351,7 +368,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/generalized+Calabi-Yau+manifold">generalized Calabi-Yau manifold</a></p>
 </li>
-</ul></div>
+</ul></div></div>
 </div>
 </div>
 
@@ -396,6 +413,10 @@ margin-left: 0em;
 
 <li>
 <p>A nonsingular degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>4</mn></mrow><annotation encoding="application/x-tex">4</annotation></semantics></math> hypersurface in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℙ</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{P}^3</annotation></semantics></math>, such as the <span class="newWikiWord">Fermat quartic<a href="/nlab/new/Fermat+hypersurface">?</a></span> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><mo stretchy="false">[</mo><mi>w</mi><mo>,</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo>,</mo><mi>z</mi><mo stretchy="false">]</mo><mo>∈</mo><msup><mi>ℙ</mi> <mn>3</mn></msup><mo stretchy="false">|</mo><msup><mi>w</mi> <mn>4</mn></msup><mo>+</mo><msup><mi>x</mi> <mn>4</mn></msup><mo>+</mo><msup><mi>y</mi> <mn>4</mn></msup><mo>+</mo><msup><mi>z</mi> <mn>4</mn></msup><mo>=</mo><mn>0</mn><mo stretchy="false">}</mo></mrow><annotation encoding="application/x-tex">\{[w,x,y,z] \in \mathbb{P}^3 | w^4 + x^4 + y^4 + z^4 = 0\}</annotation></semantics></math> (in fact every K3 surface over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding="application/x-tex">\mathbb{C}</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/diffeomorphism">diffeomorphic</a> to this example).</p>
+</li>
+
+<li>
+<p>The <a class="existingWikiWord" href="/nlab/show/flat+orbifold">flat orbifold</a> quotient of the <a class="existingWikiWord" href="/nlab/show/4-torus">4-torus</a> by the sign <a class="existingWikiWord" href="/nlab/show/involution">involution</a> on all four canonical <a class="existingWikiWord" href="/nlab/show/coordinates">coordinates</a> is the flat compact 4-dimensional orbifold known as the <em>Kummer surface</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>T</mi> <mn>4</mn></msup><mo>⫽</mo><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">T^4 \sslash \mathbb{Z}_2</annotation></semantics></math>, a singular <a class="existingWikiWord" href="/nlab/show/K3-surface">K3-surface</a> (e.g. <a href="Riemannian+orbifold#BettiolDerdzinskiPiccione18">Bettiol-Derdzinski-Piccione 18, 5.5</a>)</p>
 </li>
 </ul>
 
@@ -497,12 +518,18 @@ margin-left: 0em;
 </ul>
 
 <p>(<a href="#Artin74">Artin 74</a>), see also (<a href="#ArtinMazur77">Artin-Mazur 77, p. 5 (of 46)</a>)</p>
-<p><strong><a class="existingWikiWord" href="/nlab/show/moduli+spaces">moduli spaces</a> of <a class="existingWikiWord" href="/nlab/show/line+n-bundles+with+connection">line n-bundles with connection</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/dimension">dimensional</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></strong></p><table><thead><tr><th><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math></th><th><a class="existingWikiWord" href="/nlab/show/Calabi-Yau+object">Calabi-Yau n-fold</a></th><th><a class="existingWikiWord" href="/nlab/show/line+n-bundle">line n-bundle</a></th><th>moduli of <a class="existingWikiWord" href="/nlab/show/line+n-bundles">line n-bundles</a></th><th>moduli of <a class="existingWikiWord" href="/nlab/show/flat+infinity-connection">flat</a>/degree-0 n-bundles</th><th><a class="existingWikiWord" href="/nlab/show/Artin-Mazur+formal+group">Artin-Mazur formal group</a> of <a class="existingWikiWord" href="/nlab/show/deformation+theory">deformation moduli</a> of <a class="existingWikiWord" href="/nlab/show/line+n-bundles">line n-bundles</a></th><th><a class="existingWikiWord" href="/nlab/show/complex+oriented+cohomology+theory">complex oriented cohomology theory</a></th><th><a class="existingWikiWord" href="/nlab/show/modular+functor">modular functor</a>/<a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+theory">self-dual higher gauge theory</a> of <a class="existingWikiWord" href="/nlab/show/higher+dimensional+Chern-Simons+theory">higher dimensional Chern-Simons theory</a></th></tr></thead><tbody><tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">n = 0</annotation></semantics></math></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/unit">unit</a> in <a class="existingWikiWord" href="/nlab/show/structure+sheaf">structure sheaf</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/multiplicative+group">multiplicative group</a>/<a class="existingWikiWord" href="/nlab/show/group+of+units">group of units</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/formal+multiplicative+group">formal multiplicative group</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/complex+K-theory">complex K-theory</a></td><td style="text-align: left;"></td></tr>
+<div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/moduli+spaces">moduli spaces</a> of <a class="existingWikiWord" href="/nlab/show/line+n-bundles+with+connection">line n-bundles with connection</a> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/dimension">dimensional</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math></strong></p>
+
+<table><thead><tr><th><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math></th><th><a class="existingWikiWord" href="/nlab/show/Calabi-Yau+object">Calabi-Yau n-fold</a></th><th><a class="existingWikiWord" href="/nlab/show/line+n-bundle">line n-bundle</a></th><th>moduli of <a class="existingWikiWord" href="/nlab/show/line+n-bundles">line n-bundles</a></th><th>moduli of <a class="existingWikiWord" href="/nlab/show/flat+infinity-connection">flat</a>/degree-0 n-bundles</th><th><a class="existingWikiWord" href="/nlab/show/Artin-Mazur+formal+group">Artin-Mazur formal group</a> of <a class="existingWikiWord" href="/nlab/show/deformation+theory">deformation moduli</a> of <a class="existingWikiWord" href="/nlab/show/line+n-bundles">line n-bundles</a></th><th><a class="existingWikiWord" href="/nlab/show/complex+oriented+cohomology+theory">complex oriented cohomology theory</a></th><th><a class="existingWikiWord" href="/nlab/show/modular+functor">modular functor</a>/<a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+theory">self-dual higher gauge theory</a> of <a class="existingWikiWord" href="/nlab/show/higher+dimensional+Chern-Simons+theory">higher dimensional Chern-Simons theory</a></th></tr></thead><tbody><tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">n = 0</annotation></semantics></math></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/unit">unit</a> in <a class="existingWikiWord" href="/nlab/show/structure+sheaf">structure sheaf</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/multiplicative+group">multiplicative group</a>/<a class="existingWikiWord" href="/nlab/show/group+of+units">group of units</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/formal+multiplicative+group">formal multiplicative group</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/complex+K-theory">complex K-theory</a></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n = 1</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/elliptic+curve">elliptic curve</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/line+bundle">line bundle</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Picard+group">Picard group</a>/<a class="existingWikiWord" href="/nlab/show/Picard+scheme">Picard scheme</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Jacobian">Jacobian</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/formal+Picard+group">formal Picard group</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/elliptic+cohomology">elliptic cohomology</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/3d+Chern-Simons+theory">3d Chern-Simons theory</a>/<a class="existingWikiWord" href="/nlab/show/WZW+model">WZW model</a></td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">n = 2</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/K3+surface">K3 surface</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/line+2-bundle">line 2-bundle</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Brauer+group">Brauer group</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/intermediate+Jacobian">intermediate Jacobian</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/formal+Brauer+group">formal Brauer group</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/K3+cohomology">K3 cohomology</a></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>3</mn></mrow><annotation encoding="application/x-tex">n = 3</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Calabi-Yau+3-fold">Calabi-Yau 3-fold</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/line+3-bundle">line 3-bundle</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/intermediate+Jacobian">intermediate Jacobian</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Calabi-Yau+cohomology">CY3 cohomology</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/7d+Chern-Simons+theory">7d Chern-Simons theory</a>/<a class="existingWikiWord" href="/nlab/show/M5-brane">M5-brane</a></td></tr>
 <tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math></td><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/intermediate+Jacobian">intermediate Jacobian</a></td><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 </tbody></table>
+
+</div>
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -632,14 +659,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 09:19:27.
+  Last revised on December 11, 2018 at 03:14:22.
   See the <a href="https://ncatlab.org/nlab/history/K3 surface" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K3 surface/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
