--- a/pages/19934.html
+++ b/pages/19934.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -563,6 +563,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#noncompact_orbifolds'>Non-compact orbifolds</a></li>
 <li><a href='#FlatCompact2DimensionalOrbifolds'>Flat compact 2-dimensional orbifolds</a></li>
+<li><a href='#flat_compact_4dimensional_orbifolds'>Flat compact 4-dimensional orbifolds</a></li>
 </ul>
 <li><a href='#references'>References</a></li>
 <ul>
@@ -596,7 +597,9 @@ margin-left: 0em;
 <p>graphics grabbed from <a href="#BettiolDerdzinskiPiccione18">Bettiol-Derdzinski-Piccione 18</a></p>
 </blockquote>
 
-<p>(…)</p>
+<h3 id="flat_compact_4dimensional_orbifolds">Flat compact 4-dimensional orbifolds</h3>
+
+<p>The orbifold quotient of the <a class="existingWikiWord" href="/nlab/show/4-torus">4-torus</a> by the sign <a class="existingWikiWord" href="/nlab/show/involution">involution</a> on all four canonical <a class="existingWikiWord" href="/nlab/show/coordinates">coordinates</a> is the flat compact 4-dimensional orbifold known as the <em><a class="existingWikiWord" href="/nlab/show/Kummer+surface">Kummer surface</a></em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>T</mi> <mn>4</mn></msup><mo>⫽</mo><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">T^4 \sslash \mathbb{Z}_2</annotation></semantics></math>, a singular <a class="existingWikiWord" href="/nlab/show/K3-surface">K3-surface</a> (e.g. <a href="#BettiolDerdzinskiPiccione18">Bettiol-Derdzinski-Piccione 18, 5.5</a>)</p>
 
 <h2 id="references">References</h2>
 
@@ -629,7 +632,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 02:46:16.
+  Last revised on December 11, 2018 at 03:12:22.
   See the <a href="https://ncatlab.org/nlab/history/Riemannian orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
