--- a/pages/19934.html
+++ b/pages/19934.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9269/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -565,6 +565,7 @@ margin-left: 0em;
 <li><a href='#FlatCompact2DimensionalOrbifolds'>Flat compact 2-dimensional orbifolds</a></li>
 <li><a href='#flat_compact_4dimensional_orbifolds'>Flat compact 4-dimensional orbifolds</a></li>
 </ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
@@ -601,6 +602,12 @@ margin-left: 0em;
 
 <p>The orbifold quotient of the <a class="existingWikiWord" href="/nlab/show/4-torus">4-torus</a> by the sign <a class="existingWikiWord" href="/nlab/show/involution">involution</a> on all four canonical <a class="existingWikiWord" href="/nlab/show/coordinates">coordinates</a> is the flat compact 4-dimensional orbifold known as the <em><a class="existingWikiWord" href="/nlab/show/Kummer+surface">Kummer surface</a></em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>T</mi> <mn>4</mn></msup><mo>⫽</mo><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">T^4 \sslash \mathbb{Z}_2</annotation></semantics></math>, a singular <a class="existingWikiWord" href="/nlab/show/K3-surface">K3-surface</a> (e.g. <a href="#BettiolDerdzinskiPiccione18">Bettiol-Derdzinski-Piccione 18, 5.5</a>)</p>
 
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/branched+cover">branched cover</a></li>
+</ul>
+
 <h2 id="references">References</h2>
 
 <h3 id="general">General</h3>
@@ -617,29 +624,27 @@ margin-left: 0em;
 <li id="BettiolDerdzinskiPiccione18">
 <p>Renato G. Bettiol, Andrzej Derdzinski, Paolo Piccione, <em>Teichmüller theory and collapse of flat manifolds</em>, Annali di Matematica (2018) 197: 1247 (<a href="https://arxiv.org/abs/1705.08431">arXiv:1705.08431</a>, <a href="https://doi.org/10.1007/s10231-017-0723-7">doi:10.1007/s10231-017-0723-7</a>)</p>
 </li>
-
-<li id="Guerreiro09">
-<p>João Guerreiro, <em>Orbifolds and Wallpaper Patterns</em> (<a href="https://faculty.math.illinois.edu/~ruiloja/Estudantes/TrabalhoJGuerreiro.pdf">pdf</a>)</p>
-</li>
 </ul>
 
 <h3 id="flat_orbifolds">Flat orbifolds</h3>
 
-<p>(…)</p>
+<ul>
+<li id="Guerreiro09">João Guerreiro, <em>Orbifolds and Wallpaper Patterns</em> (<a href="https://faculty.math.illinois.edu/~ruiloja/Estudantes/TrabalhoJGuerreiro.pdf">pdf</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 03:12:22.
+  Last revised on December 11, 2018 at 06:30:20.
   See the <a href="https://ncatlab.org/nlab/history/Riemannian orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Riemannian orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
