--- a/pages/19935.html
+++ b/pages/19935.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -527,7 +527,7 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>A <em>wallpaper group</em> is a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>⊂</mo><mi>Iso</mi><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mn>2</mn></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G \subset Iso(\mathbb{R}^2)</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/isometry+group">isometry group</a> of the <a class="existingWikiWord" href="/nlab/show/Euclidean+plane">Euclidean plane</a> such that</p>
+<p>A <em>wallpaper group</em> is a <a class="existingWikiWord" href="/nlab/show/space+group">space group</a> in <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> 2, hence a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo>⊂</mo><mi>Iso</mi><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mn>2</mn></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">G \subset Iso(\mathbb{R}^2)</annotation></semantics></math> of the <a class="existingWikiWord" href="/nlab/show/isometry+group">isometry group</a> of the <a class="existingWikiWord" href="/nlab/show/Euclidean+plane">Euclidean plane</a> such that</p>
 
 <ol>
 <li>
@@ -572,14 +572,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 06:48:45.
+  Last revised on December 11, 2018 at 07:00:58.
   See the <a href="https://ncatlab.org/nlab/history/wallpaper group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/wallpaper+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wallpaper+group/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/wallpaper+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wallpaper+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/wallpaper+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wallpaper+group/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/wallpaper+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wallpaper+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/wallpaper group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
