--- a/pages/19991.html
+++ b/pages/19991.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9367/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9367/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -526,18 +526,22 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>A <strong>space group</strong> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^n</annotation></semantics></math>, also known as a <strong>crystallographic group</strong>, is a subgroup of the group of Euclidean motions that contains some lattice in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^n</annotation></semantics></math> as a subgroup, and is contained within the automorphism group of the lattice. In other words, it is a subgroup of the automorphism group of the lattice that contains all the translations by elements of the lattice itself.</p>
+<p>A <strong>space group</strong> in <a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>, also known as a <strong>crystallographic group</strong>, is a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> of the corresponding <a class="existingWikiWord" href="/nlab/show/Euclidean+group">Euclidean group</a>, hence of the <a class="existingWikiWord" href="/nlab/show/isometry+group">isometry group</a> of <a class="existingWikiWord" href="/nlab/show/Euclidean+space">Euclidean space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^n</annotation></semantics></math>, that contains some <a class="existingWikiWord" href="/nlab/show/lattice+in+a+vector+space">lattice</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding="application/x-tex">\mathbb{R}^n</annotation></semantics></math> as a subgroup, and is contained within the <a class="existingWikiWord" href="/nlab/show/automorphism+group">automorphism group</a> of the lattice. In other words, it is a subgroup of the automorphism group of the lattice that contains all the <a class="existingWikiWord" href="/nlab/show/translations">translations</a> by elements of the lattice itself.</p>
 
-<p>Equivalently, it can be defined as a subgroup of the group of Euclidean motions that contains a lattice of translations as a normal subgroup.</p>
+<p>Equivalently, it can be defined as a subgroup of the group of Euclidean motions that contains a lattice of translations as a <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal subgroup</a>.</p>
 
 <p>In 2 dimensions, there are 17 distinct groups, known as <a class="existingWikiWord" href="/nlab/show/wallpaper+groups">wallpaper groups</a>. In 3 dimensions, there are 219 distinct types, or 230 if chiral copies are considered distinct. The classification of space groups has been carried out up to 6 dimensions.</p>
 
 <h2 id="references">References</h2>
 
 <ul>
-<li><a href="https://groupprops.subwiki.org/wiki/Space_group">Groupprops: space group</a></li>
+<li>
+<p>Groupprops, <em><a href="https://groupprops.subwiki.org/wiki/Space_group">Space group</a></em></p>
+</li>
 
-<li><a href="https://en.wikipedia.org/wiki/Space_group">Wikipedia: space group</a></li>
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Space_group">Space group</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -545,14 +549,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on December 11, 2018 at 06:57:19.
+  Last revised on December 11, 2018 at 07:41:59.
   See the <a href="https://ncatlab.org/nlab/history/space group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/space+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/space+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/space+group/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/space+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/space+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/space group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
