--- a/pages/3731.html
+++ b/pages/3731.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -324,7 +324,7 @@ margin-left: 0em;
 
 <p>There are many examples that the objects of <a class="existingWikiWord" href="/nlab/show/additive+categories">additive categories</a> (abelian, abelian tensor categories, triangulated etc.) are equipped with <strong>slope filtrations</strong>, which are labelled by <strong>real</strong> numbers.</p>
 
-<p>Slope is here related to <a class="existingWikiWord" href="/nlab/show/Bridgeland+stability">Bridgeland stability</a>. For instance <a class="existingWikiWord" href="/nlab/show/stable+coherent+sheaf">stability of coherent sheaves</a> in the case of <span class="newWikiWord">slope of coherent sheavees<a href="/nlab/new/slope+of+coherent+sheavees">?</a></span></p>
+<p>Slope is here related to <a class="existingWikiWord" href="/nlab/show/Bridgeland+stability">Bridgeland stability</a>. For instance <a class="existingWikiWord" href="/nlab/show/stable+coherent+sheaf">stability of coherent sheaves</a> in the case of <span class="newWikiWord">slope of coherent sheaves<a href="/nlab/new/slope+of+coherent+sheaves">?</a></span></p>
 
 <p>The <em>Stokes phenomenon</em> in the study of asymptotics of differential equations may be regarded as a similar structure on the <a class="existingWikiWord" href="/nlab/show/D-modules">D-modules</a> (or by the <a class="existingWikiWord" href="/nlab/show/Riemann-Hilbert+correspondence">Riemann-Hilbert correspondence</a>, on the object in certain category of monodromy data), which correspond to the solutions of differential equations.</p>
 
@@ -363,14 +363,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 10:38:34.
+  Last revised on December 11, 2018 at 08:08:26.
   See the <a href="https://ncatlab.org/nlab/history/slope filtration" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/slope+filtration" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+filtration/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/slope+filtration" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+filtration" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/slope+filtration" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/slope+filtration/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/slope+filtration" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/slope+filtration" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/slope filtration/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
