--- a/pages/15523.html
+++ b/pages/15523.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -725,15 +725,15 @@ margin-left: 0em;
 <li id="Alexander20"><a class="existingWikiWord" href="/nlab/show/James+W.+Alexander">James W. Alexander</a>, <em>Note on Riemann spaces</em>, Bull. Amer. Math. Soc. 26 (1920) 370–373</li>
 </ul>
 
-<p>All 4-<a class="existingWikiWord" href="/nlab/show/dimension">dimensional</a> <a class="existingWikiWord" href="/nlab/show/manifolds">manifolds</a> are <em>simple</em> branched covers of the <a class="existingWikiWord" href="/nlab/show/4-sphere">4-sphere</a>:</p>
+<p>All <a class="existingWikiWord" href="/nlab/show/4-manifolds">4-manifolds</a> are <em>simple</em> branched covers of the <a class="existingWikiWord" href="/nlab/show/4-sphere">4-sphere</a>:</p>
 
 <ul>
 <li id="Piergallini95">
-<p>R. Piergallini, <em>Four-manifolds as 4-fold branched covers of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>4</mn></msup></mrow><annotation encoding="application/x-tex">S^4</annotation></semantics></math></em>, Topology Volume 34, Issue 3, July 1995 (<a href="https://doi.org/10.1016/0040-9383(94)00034-I">doi:10.1016/0040-9383(94)00034-I</a>, <a href="https://core.ac.uk/download/pdf/82379618.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Riccardo+Piergallini">Riccardo Piergallini</a>, <em>Four-manifolds as 4-fold branched covers of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>4</mn></msup></mrow><annotation encoding="application/x-tex">S^4</annotation></semantics></math></em>, Topology Volume 34, Issue 3, July 1995 (<a href="https://doi.org/10.1016/0040-9383(94)00034-I">doi:10.1016/0040-9383(94)00034-I</a>, <a href="https://core.ac.uk/download/pdf/82379618.pdf">pdf</a>)</p>
 </li>
 
 <li id="IoriPiergallini02">
-<p>Massimiliano Iori, Riccardo Piergallini, <em>4-manifolds as covers of the 4-sphere branched over non-singular surfaces</em>, Geom. Topol. 6 (2002) 393-401 (<a href="https://arxiv.org/abs/math/0203087">arXiv:math/0203087</a>)</p>
+<p>Massimiliano Iori, <a class="existingWikiWord" href="/nlab/show/Riccardo+Piergallini">Riccardo Piergallini</a>, <em>4-manifolds as covers of the 4-sphere branched over non-singular surfaces</em>, Geom. Topol. 6 (2002) 393-401 (<a href="https://arxiv.org/abs/math/0203087">arXiv:math/0203087</a>)</p>
 </li>
 </ul>
 
@@ -748,14 +748,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 06:55:08.
+  Last revised on December 11, 2018 at 09:57:46.
   See the <a href="https://ncatlab.org/nlab/history/branched cover" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/branched+cover" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/branched+cover/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/branched+cover" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/branched+cover" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/branched+cover" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/branched+cover/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/branched+cover" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/branched+cover" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/branched cover/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
