--- a/pages/6049.html
+++ b/pages/6049.html
@@ -763,9 +763,11 @@ margin-left: 0em;
 
 <p>corresponding <a class="existingWikiWord" href="/nlab/show/brane+webs">brane webs</a>:</p>
 
-<p><span class="newWikiWord">WebNS5D6.jpg<a href="/nlab/files/WebNS5D6.jpg">?</a></span></p>
+<p><img src="https://ncatlab.org/nlab/files/WebNS5D6.jpg" width="600" /></p>
 
-<p><img src="https://ncatlab.org/nlab/files/WebNS5D6.jpg" /></p>
+<blockquote>
+<p>graphics grabbed from (Kimura 16 <a href="http://www2.yukawa.kyoto-u.ac.jp/~qft.web/2016/slides/kimura.pdf">pdf</a>)</p>
+</blockquote>
 
 <h3 id="relation_to_khovanov_homology">Relation to Khovanov homology</h3>
 
@@ -1007,7 +1009,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 10:59:26.
+  Last revised on December 11, 2018 at 11:01:07.
   See the <a href="https://ncatlab.org/nlab/history/NS5-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
