--- a/pages/320.html
+++ b/pages/320.html
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="monoidal_categories">Monoidal categories</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a></strong></p><h2 id="with_symmetry">With symmetry</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a></strong></p>
+
+<h2 id="with_symmetry">With symmetry</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/braided+monoidal+category">braided monoidal category</a></p>
 </li>
@@ -333,7 +339,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+category">symmetric monoidal category</a></p>
 </li>
-</ul><h2 id="with_duals_for_objects">With duals for objects</h2><ul>
+</ul>
+
+<h2 id="with_duals_for_objects">With duals for objects</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category+with+duals">category with duals</a> (list of them)</p>
 </li>
@@ -361,7 +371,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/compact+closed+category">compact closed category</a></p>
 </li>
-</ul><h2 id="with_duals_for_morphisms">With duals for morphisms</h2><ul>
+</ul>
+
+<h2 id="with_duals_for_morphisms">With duals for morphisms</h2>
+
+<ul>
 <li>
 <p><span class="newWikiWord">monoidal dagger-category<a href="/nlab/new/monoidal+dagger-category">?</a></span></p>
 </li>
@@ -373,7 +387,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/dagger+compact+category">dagger compact category</a></p>
 </li>
-</ul><h2 id="with_traces">With traces</h2><ul>
+</ul>
+
+<h2 id="with_traces">With traces</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/trace">trace</a></p>
 </li>
@@ -381,7 +399,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/traced+monoidal+category">traced monoidal category</a></p>
 </li>
-</ul><h2 id="closed_structure">Closed structure</h2><ul>
+</ul>
+
+<h2 id="closed_structure">Closed structure</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/closed+monoidal+category">closed monoidal category</a></p>
 </li>
@@ -397,7 +419,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/star-autonomous+category">star-autonomous category</a></p>
 </li>
-</ul><h2 id="special_sorts_of_products">Special sorts of products</h2><ul>
+</ul>
+
+<h2 id="special_sorts_of_products">Special sorts of products</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cartesian+monoidal+category">cartesian monoidal category</a></p>
 </li>
@@ -409,7 +435,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/multicategory">multicategory</a></p>
 </li>
-</ul><h2 id="semisimplicity">Semisimplicity</h2><ul>
+</ul>
+
+<h2 id="semisimplicity">Semisimplicity</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/semisimple+category">semisimple category</a></p>
 </li>
@@ -421,7 +451,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/modular+tensor+category">modular tensor category</a></p>
 </li>
-</ul><h2 id="morphisms">Morphisms</h2><ul>
+</ul>
+
+<h2 id="morphisms">Morphisms</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+functor">monoidal functor</a></p>
 
@@ -435,7 +469,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+functor">symmetric monoidal functor</a></p>
 </li>
-</ul><h2 id="internal_monoids">Internal monoids</h2><ul>
+</ul>
+
+<h2 id="internal_monoids">Internal monoids</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoid+in+a+monoidal+category">monoid in a monoidal category</a></p>
 </li>
@@ -447,7 +485,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/module+over+a+monoid">module over a monoid</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/tensor+product">tensor product</a></p>
 </li>
@@ -459,7 +501,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Day+convolution">Day convolution</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/coherence+theorem+for+monoidal+categories">coherence theorem for monoidal categories</a></p>
 </li>
@@ -467,7 +513,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
 </li>
-</ul><h2 id="in_higher_category_theory">In higher category theory</h2><ul>
+</ul>
+
+<h2 id="in_higher_category_theory">In higher category theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+2-category">monoidal 2-category</a></p>
 
@@ -503,13 +553,20 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/compact+double+category">compact double category</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/monoidal+categories+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 
 <h4 id="category_theory">Category theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p><h2 id="concepts">Concepts</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category">category</a></p>
 </li>
@@ -525,7 +582,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Cat">Cat</a></p>
 </li>
-</ul><h2 id="universal_constructions">Universal constructions</h2><ul>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/universal+construction">universal construction</a></p>
 
@@ -555,7 +616,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a></p>
 </li>
@@ -599,7 +664,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relation+between+type+theory+and+category+theory">relation between type theory and category theory</a></p>
 </li>
-</ul><h2 id="extensions">Extensions</h2><ul>
+</ul>
+
+<h2 id="extensions">Extensions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/sheaf+and+topos+theory">sheaf and topos theory</a></p>
 </li>
@@ -611,18 +680,41 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
 </li>
-</ul><h2 id="applications">Applications</h2><ul>
+</ul>
+
+<h2 id="applications">Applications</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/applications+of+%28higher%29+category+theory">applications of (higher) category theory</a></li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/category+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#definition">Definition</a><ul><li><a href="#in_components">In components</a></li><li><a href="#in_terms_of_cartesian_monads">In terms of cartesian monads</a></li></ul></li><li><a href="#properties">Properties</a><ul><li><a href="#relation_to_operads">Relation to operads</a></li><li><a href="#relation_to_monoidal_categories">Relation to monoidal categories</a></li></ul></li><li><a href="#examples_and_special_cases">Examples and special cases</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#definition'>Definition</a></li>
+<ul>
+<li><a href='#in_components'>In components</a></li>
+<li><a href='#in_terms_of_cartesian_monads'>In terms of cartesian monads</a></li>
+</ul>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#relation_to_operads'>Relation to operads</a></li>
+<li><a href='#relation_to_monoidal_categories'>Relation to monoidal categories</a></li>
+</ul>
+<li><a href='#examples_and_special_cases'>Examples and special cases</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>Recall that a <a class="existingWikiWord" href="/nlab/show/category">category</a> consists of a collection of <a class="existingWikiWord" href="/nlab/show/morphisms">morphisms</a> each having a single <a class="existingWikiWord" href="/nlab/show/object">object</a> as source or input, and a single object as target or output, together with laws for composition and identity obeying associativity and identity axioms. A <em>multicategory</em> is like a category, except that one allows multiple inputs and a single output.</p>
@@ -746,14 +838,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 04:34:26.
+  Last revised on December 11, 2018 at 11:16:48.
   See the <a href="https://ncatlab.org/nlab/history/multicategory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/multicategory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/multicategory/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/multicategory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/multicategory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/multicategory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/multicategory/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/multicategory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/multicategory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/multicategory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
