--- a/pages/6049.html
+++ b/pages/6049.html
@@ -713,6 +713,14 @@ margin-left: 0em;
 
 <p><img src="https://ncatlab.org/nlab/files/D6SuspendedNS5.png" /></p>
 
+<p>And on the other end the D6-branes may end on <a class="existingWikiWord" href="/nlab/show/D8-branes">D8-branes</a>:</p>
+
+<p><img src="https://ncatlab.org/nlab/files/GaiottoNS5D6.jpg" width="600" /></p>
+
+<blockquote>
+<p>graphics grabbed from <a href="#GaiottoTomasiello14">Gaiotto-Tomasiello 14</a></p>
+</blockquote>
+
 <h4 id="NSHalfBranes">NS5 half-branes</h4>
 
 <p>By the discussion <a href="NS5-brane#D6BranesEndingOnNS5Branes">above</a><em>, a <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/D6-brane">D6-brane</a> may end on a <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/NS5-brane">NS5-brane</a>, and in fact a priori each <a class="existingWikiWord" href="/nlab/show/black+brane">brane</a> <a class="existingWikiWord" href="/nlab/show/NS5-brane">NS5-brane</a> has to be the junction of two <a class="existingWikiWord" href="/nlab/show/black+brane">black</a> <a class="existingWikiWord" href="/nlab/show/D6-branes">D6-branes</a>.</em></p>
@@ -999,6 +1007,10 @@ margin-left: 0em;
 <p>E. Gorbatov, V.S. Kaplunovsky, J. Sonnenschein, <a class="existingWikiWord" href="/nlab/show/Stefan+Theisen">Stefan Theisen</a>, S. Yankielowicz, <em>On Heterotic Orbifolds, M Theory and Type I’ Brane Engineering</em>, JHEP 0205:015, 2002 (<a href="https://arxiv.org/abs/hep-th/0108135">arXiv:hep-th/0108135</a>)</p>
 </li>
 
+<li id="GaiottoTomasiello14">
+<p><a class="existingWikiWord" href="/nlab/show/Davide+Gaiotto">Davide Gaiotto</a>, <a class="existingWikiWord" href="/nlab/show/Alessandro+Tomasiello">Alessandro Tomasiello</a>, <em>Holography for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>1</mn><mo>,</mo><mn>0</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(1,0)</annotation></semantics></math> theories in six dimensions</em> (<a href="https://arxiv.org/abs/1404.0711">arXiv:1404.0711</a>)</p>
+</li>
+
 <li id="HKLY15">
 <p>Hirotaka Hayashi, Sung-Soo Kim, Kimyeong Lee, Futoshi Yagi, <em>6d SCFTs, 5d Dualities and Tao Web Diagrams</em> (<a href="https://arxiv.org/abs/1509.03300">arXiv:1509.03300</a>)</p>
 </li>
@@ -1009,14 +1021,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 11:01:07.
+  Last revised on December 11, 2018 at 12:18:35.
   See the <a href="https://ncatlab.org/nlab/history/NS5-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/NS5-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/NS5-brane/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/NS5-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/NS5-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/NS5-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/NS5-brane/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/NS5-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/NS5-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/NS5-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
