--- a/pages/7959.html
+++ b/pages/7959.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4055/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4055/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1188,7 +1188,8 @@ margin-left: 0em;
 <li><a href='#ReferencesModels'>Models</a></li>
 <ul>
 <li><a href='#ReferencesHeteroticModels'>Heterotic models</a></li>
-<li><a href='#ReferencesTypeIIModels'>Type II / F-theory models</a></li>
+<li><a href='#ReferencesTypeIIModels'>Type II string theory models</a></li>
+<li><a href='#ftheory_models'>F-Theory models</a></li>
 <li><a href='#ReferencesMTheoryModels'>M-theory models</a></li>
 <li><a href='#nonsupersymmetric_models_2'>Non-supersymmetric models</a></li>
 </ul>
@@ -1404,14 +1405,6 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Bobby+Acharya">Bobby Acharya</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Chiral Fermions from Manifolds of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math> Holonomy</em> (<a href="http://arxiv.org/abs/hep-th/0109152">arXiv:hep-th/0109152</a>)</p>
 </li>
 
-<li id="DijkstraHuiszoonSchellekens04a">
-<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Chiral Supersymmetric Standard Model Spectra from Orientifolds of Gepner Models</em>, Phys.Lett. B609 (2005) 408-417 (<a href="https://arxiv.org/abs/hep-th/0403196">arXiv:hep-th/0403196</a>)</p>
-</li>
-
-<li id="DijkstraHuiszoonSchellekens04b">
-<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Supersymmetric Standard Model Spectra from RCFT orientifolds</em>, Nucl.Phys.B710:3-57,2005 (<a href="https://arxiv.org/abs/hep-th/0411129">arXiv:hep-th/0411129</a>)</p>
-</li>
-
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Cumrun+Vafa">Cumrun Vafa</a>, <em>The String Landscape and the Swampland</em> (<a href="http://arxiv.org/abs/hep-th/0509212">arXiv:hep-th/0509212</a>)</p>
 </li>
@@ -1527,9 +1520,9 @@ margin-left: 0em;
 <li>Hajime Otsuka, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>32</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(32)</annotation></semantics></math> heterotic line bundle models</em>, (<a href="https://arxiv.org/abs/1801.03684">arXiv:1801.03684</a>)</li>
 </ul>
 
-<h4 id="ReferencesTypeIIModels">Type II / F-theory models</h4>
+<h4 id="ReferencesTypeIIModels">Type II string theory models</h4>
 
-<p>The canonical textbook for <a class="existingWikiWord" href="/nlab/show/type+II+superstring">type II superstring</a> phenomenology is</p>
+<p>The canonical textbook for <a class="existingWikiWord" href="/nlab/show/type+II+superstring">type II superstring</a> phenomenology via <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a> is</p>
 
 <ul>
 <li><a href="#IbanezUranga12">Ibanez-Uranga 12</a></li>
@@ -1582,6 +1575,32 @@ margin-left: 0em;
 <p>Anshuman Maharana, <a class="existingWikiWord" href="/nlab/show/Eran+Palti">Eran Palti</a>, <em>Models of Particle Physics from Type IIB String Theory and F-theory: A Review</em> (<a href="http://arxiv.org/abs/1212.0555">arXiv:1212.0555</a>)</p>
 </li>
 </ul>
+
+<p>Computer scan of <span class="newWikiWord">Gepner-model<a href="/nlab/new/Gepner-model">?</a></span>-<a class="existingWikiWord" href="/nlab/show/KK-compactifications">KK-compactifications</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a>:</p>
+
+<ul>
+<li id="DijkstraHuiszoonSchellekens04a">
+<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Chiral Supersymmetric Standard Model Spectra from Orientifolds of Gepner Models</em>, Phys.Lett. B609 (2005) 408-417 (<a href="https://arxiv.org/abs/hep-th/0403196">arXiv:hep-th/0403196</a>)</p>
+</li>
+
+<li id="DijkstraHuiszoonSchellekens04b">
+<p>T.P.T. Dijkstra, L. R. Huiszoon, <a class="existingWikiWord" href="/nlab/show/Bert+Schellekens">Bert Schellekens</a>, <em>Supersymmetric Standard Model Spectra from RCFT orientifolds</em>, Nucl.Phys.B710:3-57,2005 (<a href="https://arxiv.org/abs/hep-th/0411129">arXiv:hep-th/0411129</a>)</p>
+</li>
+</ul>
+
+<p>Computer scan of <a class="existingWikiWord" href="/nlab/show/toroidal+orbifold">toroidal orbifold</a>-<a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+models">intersecting D-brane models</a>:</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Ralph+Blumenhagen">Ralph Blumenhagen</a>, <a class="existingWikiWord" href="/nlab/show/Florian+Gmeiner">Florian Gmeiner</a>, <a class="existingWikiWord" href="/nlab/show/Gabriele+Honecker">Gabriele Honecker</a>, <a class="existingWikiWord" href="/nlab/show/Dieter+L%C3%BCst">Dieter Lüst</a>, <a class="existingWikiWord" href="/nlab/show/Timo+Weigand">Timo Weigand</a>, <em>The Statistics of Supersymmetric D-brane Models</em>, Nucl.Phys.B713:83-135, 2005 (<a href="https://arxiv.org/abs/hep-th/0411173">arXiv:hep-th/0411173</a>)</p>
+</li>
+
+<li id="GBHLW05">
+<p><a class="existingWikiWord" href="/nlab/show/Florian+Gmeiner">Florian Gmeiner</a>, <a class="existingWikiWord" href="/nlab/show/Ralph+Blumenhagen">Ralph Blumenhagen</a>, <a class="existingWikiWord" href="/nlab/show/Gabriele+Honecker">Gabriele Honecker</a>, <a class="existingWikiWord" href="/nlab/show/Dieter+L%C3%BCst">Dieter Lüst</a>, <a class="existingWikiWord" href="/nlab/show/Timo+Weigand">Timo Weigand</a>, <em>One in a Billion: MSSM-like D-Brane Statistics</em>, JHEP 0601:004, 2006 (<a href="https://arxiv.org/abs/hep-th/0510170">arXiv:hep-th/0510170</a>)</p>
+</li>
+</ul>
+
+<h4 id="ftheory_models">F-Theory models</h4>
 
 <p>Discussion of <a class="existingWikiWord" href="/nlab/show/GUT">GUT</a> <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">models</a> via <a class="existingWikiWord" href="/nlab/show/F-theory">F-theory</a> is in</p>
 
@@ -1760,14 +1779,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 14, 2018 at 02:29:39.
+  Last revised on December 14, 2018 at 04:35:28.
   See the <a href="https://ncatlab.org/nlab/history/string phenomenology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+phenomenology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+phenomenology/52" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(52 revisions)</span> | <a href="/nlab/show/diff/string+phenomenology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+phenomenology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+phenomenology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+phenomenology/53" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(53 revisions)</span> | <a href="/nlab/show/diff/string+phenomenology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+phenomenology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/string phenomenology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
