--- a/pages/9916.html
+++ b/pages/9916.html
@@ -333,6 +333,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Riemannian+orbifold">Riemannian orbifold</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+model">intersecting D-brane model</a></p>
+</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -340,14 +344,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 12, 2018 at 05:08:53.
+  Last revised on December 14, 2018 at 04:22:12.
   See the <a href="https://ncatlab.org/nlab/history/Dieter Lüst" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dieter+L%C3%BCst" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dieter+L%C3%BCst/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Dieter+L%C3%BCst" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dieter+L%C3%BCst" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dieter+L%C3%BCst" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dieter+L%C3%BCst/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Dieter+L%C3%BCst" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dieter+L%C3%BCst" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Dieter Lüst/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
