--- a/pages/16789.html
+++ b/pages/16789.html
@@ -1039,7 +1039,7 @@ margin-left: 0em;
   SU(2) \simeq S(\mathbb{Q})
 
 </annotation></semantics></math></div>
-<p>and then acting by left multipication.</p>
+<p>and then acting by left multiplication.</p>
 
 <h4 id="CircleAction">Circle action</h4>
 
@@ -1607,14 +1607,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 14, 2018 at 07:23:20.
+  Last revised on December 14, 2018 at 10:45:28.
   See the <a href="https://ncatlab.org/nlab/history/4-sphere" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/4-sphere" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/4-sphere/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/4-sphere" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/4-sphere" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/4-sphere" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/4-sphere/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/4-sphere" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/4-sphere" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/4-sphere/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
